--- a/www/templates/menu/html/statistik-tangkapan.html
+++ b/www/templates/menu/html/statistik-tangkapan.html
@@ -1,5 +1,5 @@
 <ion-view title="Statistik Tangkapan">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/penguatkuasaan/statistik-operasi/statistik-tangkapan?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/penguatkuasaan/statistik-operasi/statistik-tangkapan"></iframe>
   </ion-content>
 </ion-view>
