--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
@@ -52,7 +52,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanMedia')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-television"></i>
@@ -108,7 +108,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkanRasuah')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkan_Rasuah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-warning"></i>
@@ -129,6 +129,20 @@
                     </div>
                     <div class="col-80">
                         Data Pesalah Rasuah
+                    </div>
+                    <div class="col-10">
+                        <i class="fa fa-angle-right"></i>
+                    </div>
+                </div>
+            </md-whiteframe>
+
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.statistik_dataPesalah')">
+                <div class="row">
+                    <div class="col-10">
+                        <i class="fa fa-book"></i>
+                    </div>
+                    <div class="col-80">
+                        Statistik Data Pesalah Rasuah
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
