--- a/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/eSTK.html
+++ b/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/eSTK.html
@@ -1,5 +1,5 @@
 <ion-view title="eSTK">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/penguatkuasaan/sistem-tapisan-keutuhan-estk?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="https://estk.sprm.gov.my/v2/default.php"></iframe>
   </ion-content>
 </ion-view>
