--- a/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
+++ b/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
@@ -38,7 +38,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" ng-click="navigateTo('app.kenyataanMedia')">
+            <md-whiteframe class="md-whiteframe-z1" ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-television"></i>
