--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/jabatan-pm.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/jabatan-pm.html
@@ -1,5 +1,5 @@
 <ion-view title="CMS">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.jpm.gov.my/post/modules/main/index.php?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="http://www.jpm.gov.my/mobile/index2.php"></iframe>
   </ion-content>
 </ion-view>
