--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/portal-myGovernment.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/portal-myGovernment.html
@@ -1,5 +1,5 @@
 <ion-view title="Portal MyGovernment">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="https://www.malaysia.gov.my/?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="https://www.malaysia.gov.my/"></iframe>
   </ion-content>
 </ion-view>
