--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/single-sign-on.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/single-sign-on.html
@@ -1,5 +1,5 @@
 <ion-view title="Single Sign-On">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/single-sign-on?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="https://sso.sprm.gov.my/index.php?route=account/login"></iframe>
   </ion-content>
 </ion-view>
