--- a/www/templates/themes/expense-dashboard/html/datapesalah.html
+++ b/www/templates/themes/expense-dashboard/html/datapesalah.html
@@ -1,5 +1,5 @@
 <ion-view title="Data Pesalah">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/penguatkuasaan/data-pesalah-rasuah?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/pesalah/index.php?route=directory/search"></iframe>
   </ion-content>
 </ion-view>
