--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
@@ -13,7 +13,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.singleSignon')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-bar-chart"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         Single Sign-On
@@ -27,7 +27,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.pusatSumber')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-institution"></i>
                     </div>
                     <div class="col-80">
                         Pusat Sumber
@@ -69,7 +69,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.aduanPentadbir')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-picture-o"></i>
+                        <i class="fa fa-pencil"></i>
                     </div>
                     <div class="col-80">
                         Aduan Pentadbir Portal
@@ -83,7 +83,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.myGovernment')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-picture-o"></i>
+                        <i class="fa fa-bank"></i>
                     </div>
                     <div class="col-80">
                         Portal MyGovernment
@@ -97,7 +97,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-globe"></i>
                     </div>
                     <div class="col-80">
                         South East Asia Parties Against Corruption
