flickr icon solve/edit error

--- a/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/sistem-maklumat-kursus-MACA.html
+++ b/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/sistem-maklumat-kursus-MACA.html
@@ -1,5 +1,5 @@
 <ion-view title="Sistem Maklumat Kursus MACA">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="problem tak blh load page...(json)"></iframe>
+      <iframe class="iframe-wrapper" src="http://maca.sprm.gov.my/ikursus_maca/login.php"></iframe>
   </ion-content>
 </ion-view>
