--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
@@ -80,7 +80,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.myGovernment')">
+            <md-whiteframe class="md-whiteframe-z1" layout onclick="window.open('https://www.malaysia.gov.my/', '_system', 'location=yes'); return false;">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-bank"></i>
