--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/nkra.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/nkra.html
@@ -1,5 +1,5 @@
 <ion-view title="NKRA Membanteras Rasuah">
   <ion-content class="iframe-parent" >
-      <iframe class="iframe-wrapper" src="http://www.nkracorruption.gov.my/?device=xhtml"></iframe>
+      <iframe class="iframe-wrapper" src="http://www.nkracorruption.gov.my"></iframe>
   </ion-content>
 </ion-view>
