--- a/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
+++ b/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
@@ -13,7 +13,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.bidangKuasa')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-bar-chart"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Bidang Kuasa
@@ -27,7 +27,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenaliRasuah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-question"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Kenali Rasuah
@@ -41,7 +41,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-television"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Kenyataan Media
@@ -55,7 +55,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.keterlibatan')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Keterlibatan
@@ -69,7 +69,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.permohonanProgram')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-envelope-o"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Permohonan Program Pendidikan Masyarakat
@@ -83,7 +83,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.contractUs')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-phone"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Hubungi Kami
@@ -97,7 +97,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkan_Rasuah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Laporkan Rasuah
@@ -111,7 +111,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.sistemMaklumat')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-comments-o"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Sistem Maklumat Kursus MACA
@@ -125,7 +125,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.eSTK')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-picture-o"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Sistem Tapisan Keutuhan (eSTK)
@@ -139,7 +139,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.senaraiPegawai')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-picture-o"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         Senarai Pegawai Integriti Bertauliah
@@ -153,7 +153,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-briefcase"></i>
                     </div>
                     <div class="col-80">
                         South East Asia Parties Against Corruption
