--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
@@ -27,7 +27,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.pusatSumber')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-institution"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         Pusat Sumber
@@ -41,7 +41,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.Webmel')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-envelope-o"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         Webmel
@@ -55,7 +55,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.HRMIS')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-comments-o"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         HRMIS
@@ -69,7 +69,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.aduanPentadbir')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-pencil"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         Aduan Pentadbir Portal
@@ -83,7 +83,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout onclick="window.open('https://www.malaysia.gov.my/', '_system', 'location=yes'); return false;">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-bank"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         Portal MyGovernment
@@ -97,7 +97,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-globe"></i>
+                        <i class="fa fa-user"></i>
                     </div>
                     <div class="col-80">
                         South East Asia Parties Against Corruption
