--- a/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
@@ -13,7 +13,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.productList')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-bar-chart"></i>
+                        <i class="fa fa-bullhorn"></i>
                     </div>
                     <div class="col-80">
                         Terkini/Pengumuman
@@ -27,7 +27,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-tasks"></i>
+                        <i class="fa fa-bullhorn"></i>
                     </div>
                     <div class="col-80">
                         Kenyataan Media
