--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
@@ -13,7 +13,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.soalanLazim')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-question"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Soalan Lazim
@@ -27,7 +27,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.iklan')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-newspaper-o"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Iklan Jawatan Kosong
@@ -41,7 +41,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.contractUs')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-phone"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Hubungi Kami
@@ -55,7 +55,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-television"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Kenyataan Media
@@ -69,7 +69,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tawaranTender')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-money"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Tawaran Tender/Sebut Harga
@@ -83,7 +83,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-globe"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         South East Asia Parties Against Corruption
@@ -97,7 +97,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenaliRasuah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-info"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Kenali Rasuah
@@ -111,7 +111,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkan_Rasuah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-warning"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Laporkan Rasuah
@@ -125,7 +125,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.dataPesalah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-book"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Data Pesalah Rasuah
@@ -139,7 +139,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.statistik_dataPesalah')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-book"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Statistik Data Pesalah Rasuah
@@ -153,7 +153,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.cms')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-gear"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Sistem Pengurusan Aduan (CMS)
@@ -167,7 +167,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.mekanisme')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-balance-scale"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Mekanisme Check and Balance
@@ -181,7 +181,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.nkra')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-hand-stop-o"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         NKRA Membanteras Rasuah
@@ -195,7 +195,7 @@
             <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.jabatanPM')">
                 <div class="row">
                     <div class="col-10">
-                        <i class="fa fa-building"></i>
+                        <i class="fa fa-users"></i>
                     </div>
                     <div class="col-80">
                         Jabatan Perdana Menteri
