--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -21,7 +21,7 @@
             <div class="menu-left-header">
                 <img class="user-img" src="img/sprm/icon2.png">
                   <p>
-                      <span><a class="title" href="" ng-click"callTo(contractInfo.tel)">{{contractInfo.tel}}</a></span>
+                      <span><a class="title" ng-click="callTo(contractInfo.tel)">{{contractInfo.tel}}</a></span>
                       <br/>
                       <span class="sub-title">Laporkan Rasuah</span>
                   </p>
